--- a/1-Java基础/1-09【IO流】.md
+++ b/1-Java基础/1-09【IO流】.md
@@ -310,6 +310,20 @@ public class Demo05Writer {
 }
 ```
 
+## 1.3 关闭流的好处
+
+涉及到对外部资源的读写操作，包括网络、硬盘等等的I/O流，如果在使用完毕之后不关闭，会导致资源泄漏以及可能会引起文件锁定等问题。因此，需要在使用完毕之后关闭流。
+
+关闭流是一种资源释放机制，意味着在使用完毕之后归还系统的内存、CPU或者网络等资源，避免资源长时间占用。常见的关闭流的方法是调用close()方法，该方法会将相关的资源释放，可以有效避免导致资源泄漏的问题。
+
+- 关闭文件流可以释放系统资源，如果不关闭，系统资源会一直被占用，造成可能的内存泄露；
+
+- 打开文件流时可能会创建一些临时文件，若不关闭文件流，则这些文件可能一直存在，造成浪费空间；
+
+- 在操作文件时，文件的信息可能被破坏，如果不关闭文件流，该文件的信息可能会被损坏；
+
+- 打开文件流时，可能会把文件锁住，无法进行写入，如果不关闭文件流，这个文件一直处于锁定状态，无法进行操作。
+
 # 第二章 IO缓冲高效流
 
 缓冲流，也叫够高效流是对4个基本的FileXxx流的增强，所以也是4个流，按照数据类型分类：
