--- a/6-扩展/6-05【设计模式1-基础】.md
+++ b/6-扩展/6-05【设计模式1-基础】.md
@@ -636,11 +636,11 @@ public class Agent {
 
 用于描述类或对象之间怎样相互协作共同完成单个对象无法单独完成的任务，以及怎样分配职责。有模板方法、策略、命令、职责链、状态、观察者、中介者、迭代器、访问者、备忘录、解释器 11 种行为型模式。
 
-## 4.2 工厂方法模式和抽象工厂模式区别
-
-
-
 ## 4.3 JDK中用到了哪些设计模式
+
+几乎每一种设计模式都被用到了JDK源码中
+
+**创建型模式**
 
 ## 4.4 Spring中用到了哪些设计模式
 
