--- a/6-扩展/6-05【设计模式2-创建型模式】.md
+++ b/6-扩展/6-05【设计模式2-创建型模式】.md
@@ -36,13 +36,13 @@
     * 饿汉式-静态变量创建类的对象
     */
    public class Singleton {
-       //私有构造方法
+       // 私有构造方法
        private Singleton() {}
    
-       //在成员位置创建该类的对象
+       // 在成员位置创建该类的对象
        private static Singleton instance = new Singleton();
    
-       //对外提供静态方法获取该对象
+       // 对外提供静态方法获取该对象
        public static Singleton getInstance() {
            return instance;
        }
@@ -82,7 +82,7 @@
 
    枚举类实现单例模式是极力推荐的单例实现模式，因为枚举类型是线程安全的，并且只会装载一次，设计者充分的利用了枚举的这个特性来实现单例模式，枚举的写法非常简单，而且枚举类型是所用单例实现中唯一一种不会被破坏的单例实现模式。
 
-   枚举方式属于恶汉式方式。
+   枚举方式属于饿汉式方式。
 
    ```java
    /**
@@ -160,17 +160,17 @@
     */
    public class Singleton { 
    
-       //私有构造方法
+       // 私有构造方法
        private Singleton() {}
    
        private static Singleton instance;
    
-      //对外提供静态方法获取该对象
+       // 对外提供静态方法获取该对象
        public static Singleton getInstance() {
-   		//第一次判断，如果instance不为null，不进入抢锁阶段，直接返回实例
+   		// 第一次判断，如果instance不为null，不进入抢锁阶段，直接返回实例
            if(instance == null) {
                synchronized (Singleton.class) {
-                   //抢到锁之后再次判断是否为null
+                   // 抢到锁之后再次判断是否为null
                    if(instance == null) {
                        instance = new Singleton();
                    }
@@ -191,17 +191,18 @@
     */
    public class Singleton {
    
-       //私有构造方法
+       // 私有构造方法
        private Singleton() {}
    
+       // volatile保证可见性和有序性
        private static volatile Singleton instance;
    
-      //对外提供静态方法获取该对象
+       // 对外提供静态方法获取该对象
        public static Singleton getInstance() {
-   		//第一次判断，如果instance不为null，不进入抢锁阶段，直接返回实际
+   		// 第一次判断，如果instance不为null，不进入抢锁阶段，直接返回实际
            if(instance == null) {
                synchronized (Singleton.class) {
-                   //抢到锁之后再次判断是否为空
+                   // 抢到锁之后再次判断是否为空
                    if(instance == null) {
                        instance = new Singleton();
                    }
@@ -224,14 +225,14 @@
     */
    public class Singleton {
    
-       //私有构造方法
+       // 私有构造方法
        private Singleton() {}
    
        private static class SingletonHolder {
            private static final Singleton INSTANCE = new Singleton();
        }
    
-       //对外提供静态方法获取该对象
+       // 对外提供静态方法获取该对象
        public static Singleton getInstance() {
            return SingletonHolder.INSTANCE;
        }
@@ -242,130 +243,117 @@
 
    静态内部类单例模式是一种优秀的单例模式，是开源项目中比较常用的一种单例模式。在没有加任何锁的情况下，保证了多线程下的安全，并且没有任何性能影响和空间的浪费。
 
+## 1.2 破坏单例模式
 
+破坏单例模式：使上面定义的单例类（Singleton）可以创建多个对象。一共有两种两种方式可以破坏单例模式，分别是序列化和反射。
 
-## 1.2 单例模式的问题
-
-破坏单例模式：使上面定义的单例类（Singleton）可以创建多个对象，枚举方式除外。有两种方式，分别是序列化和反射。
+> 枚举方式实现单例模式是无法被破坏的，枚举类实现单例模式是极力推荐的单例实现模式，因为枚举类型是线程安全的，并且只会装载一次，设计者充分的利用了枚举的这个特性来实现单例模式。枚举方式属于饿汉式方式。
 
 **序列化反序列化**
 
-Singleton类：
-
 ```java
+// 静态内部类实现单例模式来测试序列化和反序列化是否可以破坏单例模式
 public class Singleton implements Serializable {
 
-    //私有构造方法
-    private Singleton() {}
+    // 私有构造方法
+    private Singleton() {
+    }
 
     private static class SingletonHolder {
         private static final Singleton INSTANCE = new Singleton();
     }
 
-    //对外提供静态方法获取该对象
+    // 对外提供静态方法获取该对象
     public static Singleton getInstance() {
         return SingletonHolder.INSTANCE;
     }
 }
 ```
 
-Test类：
-
 ```java
-public class Test {
+public class Demo01 {
+
     public static void main(String[] args) throws Exception {
-        //往文件中写对象
-        //writeObject2File();
-        //从文件中读取对象
+        // 往文件中写对象
+        writeObject2File();
+        // 从文件中读取对象
         Singleton s1 = readObjectFromFile();
         Singleton s2 = readObjectFromFile();
 
-        //判断两个反序列化后的对象是否是同一个对象
+        // 判断两个反序列化后的对象是否是同一个对象。运行结果是false，表明序列化和反序列化破坏了单例设计模式
         System.out.println(s1 == s2);
     }
 
     private static Singleton readObjectFromFile() throws Exception {
-        //创建对象输入流对象
-        ObjectInputStream ois = new ObjectInputStream(new FileInputStream("C:\\Users\\Think\\Desktop\\a.txt"));
-        //第一个读取Singleton对象
+        // 创建对象输入流对象
+        ObjectInputStream ois = new ObjectInputStream(new FileInputStream("D:\\a.txt"));
+        // 第一个读取Singleton对象
         Singleton instance = (Singleton) ois.readObject();
 
         return instance;
     }
 
     public static void writeObject2File() throws Exception {
-        //获取Singleton类的对象
+        // 获取Singleton类的对象
         Singleton instance = Singleton.getInstance();
-        //创建对象输出流
-        ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream("C:\\Users\\Think\\Desktop\\a.txt"));
-        //将instance对象写出到文件中
+        // 创建对象输出流
+        ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream("D:\\a.txt"));
+        // 将instance对象写出到文件中
         oos.writeObject(instance);
     }
 }
 ```
 
-> 上面代码运行结果是`false`，表明序列化和反序列化已经破坏了单例设计模式。
-
-------
-
 **反射**
 
-Singleton类：
-
 ```java
+// 双重检查锁实现懒汉式单例模式测试反射是否可以破坏单例模式
 public class Singleton {
 
-    //私有构造方法
+    // 私有构造方法
     private Singleton() {}
-    
+
+    // volatile保证可见性和有序性，避免指令重排序进行优化
     private static volatile Singleton instance;
 
-    //对外提供静态方法获取该对象
+    // 对外提供静态方法获取该对象
     public static Singleton getInstance() {
-
-        if(instance != null) {
-            return instance;
-        }
-
-        synchronized (Singleton.class) {
-            if(instance != null) {
-                return instance;
+		// 第一次判断，如果instance不为null，不进入抢锁阶段，直接返回实际
+        if(instance == null) {
+            synchronized (Singleton.class) {
+                // 抢到锁之后再次判断是否为空
+                if(instance == null) {
+                    instance = new Singleton();
+                }
             }
-            instance = new Singleton();
-            return instance;
         }
+        return instance;
     }
 }
 ```
 
-Test类：
-
 ```java
-public class Test {
+public class Demo01 {
     public static void main(String[] args) throws Exception {
-        //获取Singleton类的字节码对象
-        Class clazz = Singleton.class;
-        //获取Singleton类的私有无参构造方法对象
-        Constructor constructor = clazz.getDeclaredConstructor();
-        //取消访问检查
+        // 获取Singleton类的字节码对象
+        Class<Singleton> clazz = Singleton.class;
+        // 获取Singleton类的私有无参构造方法对象
+        Constructor<Singleton> constructor = clazz.getDeclaredConstructor();
+        // 暴力反射，忽略访问权限修饰符的安全检查
         constructor.setAccessible(true);
 
-        //创建Singleton类的对象s1
+        // 创建Singleton类的对象s1
         Singleton s1 = (Singleton) constructor.newInstance();
-        //创建Singleton类的对象s2
+        // 创建Singleton类的对象s2
         Singleton s2 = (Singleton) constructor.newInstance();
 
-        //判断通过反射创建的两个Singleton对象是否是同一个对象
+        // 判断通过反射创建的两个Singleton对象是否是同一个对象，结果为false，表明反射可以破坏单例设计模式
         System.out.println(s1 == s2);
     }
 }
 ```
 
-> 上面代码运行结果是`false`，表明序列化和反序列化已经破坏了单例设计模式
-
-如果是枚举方式来实现饿汉式单例模式，那么并不会产生上面的问题。
-
-## 1.3 单例模式问题解决
+## 1.3 破坏问题解决
 
 **序列化、反序列方式破坏单例模式的解决方法**
 
@@ -374,14 +362,14 @@ public class Test {
 ```java
 public class Singleton implements Serializable {
 
-    //私有构造方法
+    // 私有构造方法
     private Singleton() {}
 
     private static class SingletonHolder {
         private static final Singleton INSTANCE = new Singleton();
     }
 
-    //对外提供静态方法获取该对象
+    // 对外提供静态方法获取该对象
     public static Singleton getInstance() {
         return SingletonHolder.INSTANCE;
     }
@@ -398,72 +386,79 @@ public class Singleton implements Serializable {
 为什么必须定义`readResolve`方法呢？我们来看一下`ObjectInputStream`类：
 
 ```java
-public final Object readObject() throws IOException, ClassNotFoundException{
-    ...
-    // if nested read, passHandle contains handle of enclosing object
-    int outerHandle = passHandle;
-    try {
-        Object obj = readObject0(false);//重点查看readObject0方法
-    .....
-}
-    
-private Object readObject0(boolean unshared) throws IOException {
-	...
-    try {
-		switch (tc) {
-			...
-			case TC_OBJECT:
-				return checkResolve(readOrdinaryObject(unshared));//重点查看readOrdinaryObject方法
-			...
+public class ObjectInputStream extends InputStream implements ObjectInput, ObjectStreamConstants {
+
+    /** handle value representing null */
+    private static final int NULL_HANDLE = -1;
+
+    /** scratch field for passing handle values up/down call stack */
+    private int passHandle = NULL_HANDLE;
+
+    public final Object readObject() throws IOException, ClassNotFoundException{
+        // if nested read, passHandle contains handle of enclosing object
+        int outerHandle = passHandle;
+
+        try {
+            //重点查看readObject0方法
+            Object obj = readObject0(false);
         }
-    } finally {
-        depth--;
-        bin.setBlockDataMode(oldMode);
-    }    
-}
-    
-private Object readOrdinaryObject(boolean unshared) throws IOException {
-	...
-	//isInstantiable 返回true，执行 desc.newInstance()，通过反射创建新的单例类，
-    obj = desc.isInstantiable() ? desc.newInstance() : null; 
-    ...
-    // 在Singleton类中添加 readResolve 方法后 desc.hasReadResolveMethod() 方法执行结果为true
-    if (obj != null && handles.lookupException(passHandle) == null && desc.hasReadResolveMethod()) {
-    	// 通过反射调用 Singleton 类中的 readResolve 方法，将返回值赋值给rep变量
-    	// 这样多次调用ObjectInputStream类中的readObject方法，继而就会调用我们定义的readResolve方法，所以返回的是同一个对象。
-    	Object rep = desc.invokeReadResolve(obj);
-     	...
+
+        private Object readObject0(boolean unshared) throws IOException {
+            try {
+                switch (tc) {
+                    case TC_OBJECT:
+                        //重点查看readOrdinaryObject方法
+                        return checkResolve(readOrdinaryObject(unshared));
+                    default:
+                        throw new StreamCorruptedException(
+                            String.format("invalid type code: %02X", tc));
+                }
+            } finally {
+                depth--;
+                bin.setBlockDataMode(oldMode);
+            }    
+        }
+
+        private Object readOrdinaryObject(boolean unshared) throws IOException {
+            // isInstantiable 返回true，执行 desc.newInstance()，通过反射创建新的单例类，
+            obj = desc.isInstantiable() ? desc.newInstance() : null; 
+            // 在Singleton类中添加 readResolve 方法后 desc.hasReadResolveMethod() 方法执行结果为true
+            if (obj != null 
+                && handles.lookupException(passHandle) == null 
+                && desc.hasReadResolveMethod()) {
+                // 通过反射调用 Singleton 类中的 readResolve 方法，将返回值赋值给rep变量
+                // 这样多次调用ObjectInputStream类中的readObject方法，继而就会调用我们定义的readResolve方法，所以返回的是同一个对象。
+                Object rep = desc.invokeReadResolve(obj);
+            }
+            return obj;
+        }
     }
-    return obj;
 }
 ```
-
-------
 
 **反射方式破解单例的解决方法**
 
 ```java
 public class Singleton {
 
-    //私有构造方法
+    // 私有构造方法
     private Singleton() {
-        /*
-           反射破解单例模式需要添加的代码
-        */
+        
+        // 反射破解单例模式需要添加的代码
         if(instance != null) {
             throw new RuntimeException();
         }
     }
-    
+
     private static volatile Singleton instance;
 
-    //对外提供静态方法获取该对象
+    // 对外提供静态方法获取该对象
     public static Singleton getInstance() {
-        //第一次判断，如果instance不为null，不进入抢锁阶段，直接返回实例
-        if(instance == null) {
+        // 第一次判断，如果instance不为null，不进入抢锁阶段，直接返回实例
+        if (instance == null) {
             synchronized (Singleton.class) {
                 //抢到锁之后再次判断是否为null
-                if(instance == null) {
+                if (instance == null) {
                     instance = new Singleton();
                 }
             }
@@ -477,7 +472,7 @@ public class Singleton {
 
 ## 1.4 JDK源码解析-Runtime类
 
-Runtime类就是使用的单例设计模式。通过源代码查看使用的是哪儿种单例模式：
+Runtime类就是使用的单例设计模式。
 
 ```java
 public class Runtime {
@@ -501,7 +496,7 @@ public class Runtime {
 }
 ```
 
-从上面源代码中可以看出Runtime类使用的是恶汉式（静态属性）方式来实现单例模式的。
+从上面源代码中可以看出Runtime类使用的是饿汉式（静态属性）方式来实现单例模式的。
 
 使用Runtime类中的方法
 
