--- a/6-扩展/6-04【数据结构和算法-算法】.md
+++ b/6-扩展/6-04【数据结构和算法-算法】.md
@@ -195,35 +195,13 @@ int algorithm(int N) {
 - **暂存空间：** 算法运行过程中，存储所有中间变量和对象等数据所需的空间大小；
 - **输出空间：** 算法运行返回时，存储输出数据所需的空间大小；
 
-通常情况下，空间复杂度指在输入数据大小为 N时，算法运行所使用的「暂存空间」+「输出空间」的总体大小。
+根据不同来源，算法使用的内存空间分为三类：
 
-而根据不同来源，算法使用的内存空间分为三类：
+1. 指令空间：编译后，程序指令所使用的内存空间。
 
-1. 指令空间：
+2. 数据空间：算法中的各项变量使用的空间，包括声明的常量、变量、动态数组、动态对象等使用的内存空间。
 
-   编译后，程序指令所使用的内存空间。
-
-2. 数据空间：
-
-   算法中的各项变量使用的空间，包括：声明的常量、变量、动态数组、动态对象等使用的内存空间。
-
-   ```java
-   class Node {
-       int val;
-       Node next;
-       Node(int x) { val = x; }
-   }
-   
-   void algorithm(int N) {
-       int num = N;             // 变量
-       int[] nums = new int[N]; // 动态数组
-       Node node = new Node(N); // 动态对象
-   }
-   ```
-
-3. 栈帧空间：
-
-   程序调用函数是基于栈实现的，函数在调用期间，占用常量大小的栈帧空间，直至返回后释放。如以下代码所示，在循环中调用函数，每轮调用 `test()` 返回后，栈帧空间已被释放，因此空间复杂度仍为 `O(1)` 。
+3. 栈帧空间：程序调用函数是基于栈实现的，函数在调用期间，占用常量大小的栈帧空间，直至返回后释放。如以下代码，在循环中调用函数，每轮调用 `test()` 返回后，栈帧空间已被释放，因此空间复杂度仍为 `O(1)` 。
 
    ```java
    int test() {
@@ -246,7 +224,7 @@ int algorithm(int N) {
    }
    ```
 
-通常情况下，空间复杂度统计算法在 “最差情况” 下使用的空间大小，以体现算法运行所需预留的空间量，使用符号`O`表示。最差情况有两层含义，分别为「最差输入数据」、算法运行中的「最差运行点」。
+通常情况下，空间复杂度统计算法在 “最差情况” 下使用的空间大小，以体现算法运行所需预留的空间量，使用符号`O`表示。最差情况有两层含义，分别为「最差输入数据」、算法运行中的「最差运行点」。空间复杂度指在输入数据大小为 N 时，算法运行所使用的「暂存空间」+「输出空间」的总体大小。
 
 根据从小到大排列，常见的算法空间复杂度有：
 $$
@@ -268,91 +246,91 @@ int test() {
 }
 ```
 
-* **常数O(1) ：**
+**常数O(1) ：**
 
-  普通常量、变量、对象、元素数量与输入数据大小N无关的集合，皆使用常数大小的空间。
+普通常量、变量、对象、元素数量与输入数据大小N无关的集合，皆使用常数大小的空间。
 
-  ```java
-  void algorithm(int N) {
-      int num = 0;
-      int[] nums = new int[10000];
-      Node node = new Node(0);
-      Map<Integer, String> map = new HashMap<Integer, String>() {{
-          put(1, "2");
-      }};
-      
-      // 函数在调用期间，占用常量大小的栈帧空间，直至返回后释放。最后返回了释放了。
-      for (int i = 0; i < N; i++) {
-          test();
-      }
-  }
-  ```
+```java
+void algorithm(int N) {
+    int num = 0;
+    int[] nums = new int[10000];
+    Node node = new Node(0);
+    Map<Integer, String> map = new HashMap<Integer, String>() {{
+        put(1, "2");
+    }};
+    
+    // 函数在调用期间，占用常量大小的栈帧空间，直至返回后释放。最后返回了释放了。
+    for (int i = 0; i < N; i++) {
+        test();
+    }
+}
+```
 
-* **对数O(logN) ：**
+**对数O(logN) ：**
 
-  对数阶常出现于分治算法的栈帧空间累计、数据类型转换等，例如：
+对数阶常出现于分治算法的栈帧空间累计、数据类型转换等，例如：
 
-  - 快速排序 ，平均空间复杂度为`Θ(logN)` ，最差空间复杂度为`O(N)` 。通过应用 Tail Call Optimization ，可以将快速排序的最差空间复杂度限定至O(N) 。
+- 快速排序 ，平均空间复杂度为`Θ(log N)` ，最差空间复杂度为`O(N)` 。通过应用 Tail Call Optimization ，可以将快速排序的最差空间复杂度限定至`O(N)` 。
 
-  - 数字转化为字符串 ，设某正整数为N ，则字符串的空间复杂度为`O(logN)` 。正整数N 的位数为`log_10N` ，即转化的字符串长度为`log_10N` ，因此空间复杂度为`O(logN)` 。
+- 数字转化为字符串 ，设某正整数为N ，则字符串的空间复杂度为`O(log N)` 。正整数N 的位数为`log_10 N` ，即转化的字符串长度为`log_10 N` ，因此空间复杂度为`O(log N)` 。
 
-* **线性 O(N)：**
+**线性 O(N)：**
 
-  元素数量与 `N`呈线性关系的任意类型集合（常见于一维数组、链表、哈希表等），皆使用线性大小的空间。
+元素数量与 `N`呈线性关系的任意类型集合（常见于一维数组、链表、哈希表等），皆使用线性大小的空间。
 
-  ```java
-  void algorithm(int N) {
-      int[] nums_1 = new int[N];
-      int[] nums_2 = new int[N / 2];
-  
-      List<Node> nodes = new ArrayList<>();
-      for (int i = 0; i < N; i++) {
-          nodes.add(new Node(i));
-      }
-  
-      Map<Integer, String> dic = new HashMap<>();
-      for (int i = 0; i < N; i++) {
-          dic.put(i, String.valueOf(i));
-      }
-      
-      // 递归调用期间会同时存在N个未返回的algorithm函数，使用O(n)大小的栈帧空间
-      if (N <= 1) return 1;
-      return algorithm(N - 1) + 1;
-  }
-  ```
+```java
+void algorithm(int N) {
+    int[] nums_1 = new int[N];
+    int[] nums_2 = new int[N / 2];
 
-* **平方 O(N^2)：**
+    List<Node> nodes = new ArrayList<>();
+    for (int i = 0; i < N; i++) {
+        nodes.add(new Node(i));
+    }
 
-  元素数量与 `N`呈平方关系的任意类型集合（常见于矩阵），皆使用平方大小的空间。
+    Map<Integer, String> dic = new HashMap<>();
+    for (int i = 0; i < N; i++) {
+        dic.put(i, String.valueOf(i));
+    }
+    
+    // 递归调用期间会同时存在N个未返回的algorithm函数，使用O(n)大小的栈帧空间
+    if (N <= 1) return 1;
+    return algorithm(N - 1) + 1;
+}
+```
 
-  ```java
-  void algorithm(int N) {
-      int num_matrix[][] = new int[N][N];
-  
-      List<List<Node>> node_matrix = new ArrayList<>();
-      for (int i = 0; i < N; i++) {
-          List<Node> nodes = new ArrayList<>();
-          for (int j = 0; j < N; j++) {
-              nodes.add(new Node(j));
-          }
-          node_matrix.add(nodes);
-      }
-  }
-  ```
+**平方 O(N^2)：**
 
-  如代码所示，递归调用时同时存在 `N`个未返回的 `algorithm()` 函数，使用 `O(N)`栈帧空间；每层递归函数中声明了数组，平均长度为`N/2`，使用 `O(N)`空间；因此总体空间复杂度为 `O(N^2)` 。
+元素数量与 `N`呈平方关系的任意类型集合（常见于矩阵），皆使用平方大小的空间。
 
-  ```java
-  int algorithm(int N) {
-      if (N <= 0) return 0;
-      int[] nums = new int[N];
-      return algorithm(N - 1);
-  }
-  ```
+```java
+void algorithm(int N) {
+    int num_matrix[][] = new int[N][N];
 
-* **指数 O(2^N) ：**
+    List<List<Node>> node_matrix = new ArrayList<>();
+    for (int i = 0; i < N; i++) {
+        List<Node> nodes = new ArrayList<>();
+        for (int j = 0; j < N; j++) {
+            nodes.add(new Node(j));
+        }
+        node_matrix.add(nodes);
+    }
+}
+```
 
-  指数阶常见于二叉树、多叉树。例如，高度为 `N`的「满二叉树」的节点数量为 `2^N`，占用 `O(2^N)`大小的空间；同理，高度为 `N`的「满 m叉树」的节点数量为 `m^N`，占用 `O(m^N) = O(2^N)`大小的空间。
+如代码所示，递归调用时同时存在 `N`个未返回的 `algorithm()` 函数，使用 `O(N)`栈帧空间；每层递归函数中声明了数组，平均长度为`N/2`，使用 `O(N)`空间；因此总体空间复杂度为 `O(N^2)` 。
+
+```java
+int algorithm(int N) {
+    if (N <= 0) return 0;
+    int[] nums = new int[N];
+    return algorithm(N - 1);
+}
+```
+
+**指数 O(2^N) ：**
+
+指数阶常见于二叉树、多叉树。例如，高度为 `N`的「满二叉树」的节点数量为 `2^N`，占用 `O(2^N)`大小的空间；同理，高度为 `N`的「满 m叉树」的节点数量为 `m^N`，占用 `O(m^N) = O(2^N)`大小的空间。
 
 # 第二章 十大排序算法
 
@@ -377,7 +355,7 @@ int test() {
 
 ```java
 public static void main(String[] args) {
-    // 100以内长度为20的随机数组
+    // 创建一个100以内长度为20的随机整型数组
     Random random = new Random();
     int[] arr = new int[20];
     for (int i = 0; i < 20; i++) {
@@ -409,7 +387,7 @@ public static void main(String[] args) {
 - 持续每次对越来越少的元素重复上面的步骤，直到没有任何一对数字需要比较。
 
 
-![img](..\图片\6-04【数据结构和算法-算法】\2-1.gif)
+![](..\图片\6-04【数据结构和算法-算法】\2-1.gif)
 
 ```java
 public void bubbleSort(int[] arr) {
@@ -729,14 +707,13 @@ public static void main(String[] args) {
 
 ## 2.7 堆排序
 
-堆是一种叫做完全二叉树的数据结构，可以分为大顶堆，小顶堆，而堆排序就是基于这种结构而产生的一种程序算法。堆排序的平均时间复杂度为 Ο(n logn)。
+堆是一种叫做完全二叉树的数据结构，可以分为大顶堆，小顶堆，堆排序就是基于这种结构产生的一种程序算法。
 
 - 大顶堆：每个节点的值都大于或等于其子节点的值，在堆排序算法中用于升序排列；
 
 - 小顶堆：每个节点的值都小于或等于其子节点的值，在堆排序算法中用于降序排列；
 
-
-算法步骤如下：
+**算法步骤及代码**
 
 1. 初始化堆。从最后一个非叶子节点(`arr.length/2-1`)开始判断其子节点是否比该节点值大，如果大就更换。
 
@@ -771,7 +748,7 @@ public static void heapSort(int[] arr) {
     }
 }
 
-// arr[i]节点与其左右子节点树进行调整
+// arr[i]节点与其左右子节点树进行调整，length是需要调整的数组的长度，虚拟的切割一下数组
 public static void adjustHeap(int[] arr, int i, int length) {
     // 记录当前要调整的元素
     int tmp = arr[i];
@@ -795,6 +772,10 @@ public static void adjustHeap(int[] arr, int i, int length) {
     arr[i] = tmp;
 }
 ```
+
+**时间复杂度分析**
+
+堆排序的平均时间复杂度为 Ο(n logn)。初始化堆的时间复杂度为O(n)、调整堆的时间复杂度为O(n logn)，总的时间复杂度为O(n + (n logn))=O(n logn)。
 
 ## 2.8 计数排序
 
